@@ -1,0 +1,55 @@
+/*************************************************************************
+/* Skip.java -- BufferedInputStream skip test
+/*
+/* Copyright (c) 2004 Free Software Foundation, Inc.
+/*
+/* This program is free software; you can redistribute it and/or modify
+/* it under the terms of the GNU General Public License as published 
+/* by the Free Software Foundation, either version 2 of the License, or
+/* (at your option) any later version.
+/*
+/* This program is distributed in the hope that it will be useful, but
+/* WITHOUT ANY WARRANTY; without even the implied warranty of
+/* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+/* GNU General Public License for more details.
+/*
+/* You should have received a copy of the GNU General Public License
+/* along with this program; if not, write to the Free Software Foundation
+/* Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307 USA
+/*************************************************************************/
+
+// Tags: JDK1.0
+
+package gnu.testlet.java.io.BufferedInputStream;
+
+import gnu.testlet.Testlet;
+import gnu.testlet.TestHarness;
+import java.io.*;
+
+public class Skip implements Testlet
+{
+
+public void
+test(TestHarness harness)
+{
+  try
+    {
+      byte[] ba = new byte[]{0x44, 0x55};
+      ByteArrayInputStream bais = new ByteArrayInputStream(ba);
+      BufferedInputStream bis = new BufferedInputStream(bais);
+      long s = bis.skip(2);
+      harness.check(s, 2, "skip(2)");
+      harness.debug(s + " bytes skipped; should be 2");
+      s = bis.skip(2);
+      harness.check(s >= 0, true, "skip(2) >= 0");
+      harness.debug(s + " bytes skipped; should be >= 0");
+    }
+  catch (IOException e)
+    {
+      harness.debug(e);
+      harness.check(false);
+    }
+} // main
+
+} // class Skip
+
